--- a/gh.html
+++ b/gh.html
@@ -15,7 +15,7 @@ def<br>
 <a href="javascript:(function () {
     if (!window.ktoBookmarklet) {
         var s = document.createElement('script');
-        s.setAttribute('src', './x.js');
+        s.setAttribute('src', './js/gh.js');
         document.body.append(s);        
     } else {
         window.ktoBookmarklet.toggleMenu();
