--- a/gh.html
+++ b/gh.html
@@ -1,23 +1,72 @@
 <html>
+
 <body>
 
-<div>
+	<div>
 <textarea style="width:50%; height: 50%" id="wibble">hello
     ![image](https://github.com/user-attachments/assets/3e29d6d7-de10-4f56-81ce-e61b09fc6160)
 
     ![image](https://github.com/user-attachments/assets/3e29d6d7-de10-4f56-81ce-e61b09fc6160)
 
 </textarea>
-</div>
+	</div>
 
-<a href="javascript:(function () {
-    if (!window.ktoBookmarklet) {
-        var s = document.createElement('script');
-        s.setAttribute('src', './js/gh.js');
-        document.body.append(s);        
-    } else {
-        window.ktoBookmarklet.toggleMenu();
-    }
-})()">&lt;gh&gt;</a>
+	<a href="javascript:(function () {
+
+		window.ktoBookmarklet?window.ktoBookmarklet.toggleMenu():function(){var r,s,a,e,t,n,o,i,d,l={menuDisplayed:!1},u=window.document;'file:'===u.location.protocol||'kierantop.github.io'===u.location.host||'github.com'===u.location.host?(r=e=>{alert(e)},s=()=>{var e=u.activeElement;if(!e||'textarea'!==e.type)throw r('Please focus on a textarea'),'abc';return[e,e.selectionStart,e.selectionEnd]},a=function(){var e,t,a=s(),n=[],o='selection',i=(void 0!==t&&void 0!==a&&0<a-t||(e.focus(),u.execCommand('selectAll',!1),t=e.selectionStart,a=e.selectionEnd,o='entire textarea'),e.value.substring(t,a)),l=0,i=i.replaceAll(/\!\[image\]\((https:\/\/github\.com\/user-attachments\/.*?)\)/g,(e,t)=>(l+=1,'<img width=30% src='+t+'>'));n.push('Replaced '+l+' occurence(s) of ![image](...) in '+o),u.execCommand?u.execCommand('insertText',!1,i):(n.push('Beware, your undo buffer might misbehave.'),e.value=e.value.substring(0,t)+i+e.value.substring(a)),r(n.join(' '),e.parentElement,e.offsetWidth)},e=(e,t)=>{var a,n=s(),o=[];u.execCommand?u.execCommand('insertText',!1,t):(a.value=a.value.substring(0,void 0)+t+a.value.substring(n),o.push('Beware, your undo buffer might misbehave.')),o.push('Inserted '+e+' at cursor'),r(o.join(' '))},t=e=>e.replaceAll(/\t/g,'    ').replaceAll(/\r?\n/g,'\r\n'),n=()=>{e('details',t(`<details>
+			<summary>
+					summary
+			</summary>
+			details
+	</details>
+`))},o=()=>{e('table',t(`<table>
+	<tr>
+			<th>
+					head1
+			</th>
+			<th>
+					head2
+			</th>
+	</tr>
+	<tr>
+			<td>
+					cell1
+			</td>
+			<td>
+					cell2
+			</td>
+	</tr>
+</table>`))},i=(e,t)=>{var a=u.createElement('a');return a.setAttribute('href','#'),a.textContent=e,a.onmousedown=function(e){e.preventDefault()},a.onmouseup=function(e){e.preventDefault(),t()},a},l.toggleMenu=d=()=>{var e,t;l.menuDisplayed?(l.el.remove(),l.menuDisplayed=!1):((e=l.el=u.createElement('div')).setAttribute('style','width:100%;height:0;position:fixed;top:0;left:0;z-index: 1000;'),(t=u.createElement('div')).setAttribute('style','color:#17303B;margin: auto;text-align: center;padding:  10px;background-color:#eee;border:2px solid #A0AD39;opacity: 0.9;font-family:arial'),t.textContent='v0.1 | ',t.append(i('<img>',a)),t.append(' | '),t.append(i('<table>',o)),t.append(' | '),t.append(i('<details>',n)),e.appendChild(t),u.body.append(e),l.menuDisplayed=!0)},d(),window.ktoBookmarklet=l):alert('Only run on github.com')}();
+	})()">&lt;gh&gt;
+	</a>
+
+	<a href="javascript:(function () {
+		var s = document.createElement('script');
+	    s.textContent = 'alert(\'hello\');';
+		document.body.append(s);
+	})()">&lt;gh2&gt;
+	</a>
+
+
+	<p>
+		Useful:
+		<ul>
+			<li>https://gist.github.com/asidko/9c7064027039411a11323eaf7d8ea2a4
+			<li>https://www.npmjs.com/package/uglify-js
+		</ul>
+	</p>
+	<p>
+		TODO
+		<ul>
+			<li>
+				A build pipeline to:
+				<ol>
+					<li>uglifyjs js/gh.js -c -m -O quote_style=1
+					<li>gh.html with result of (1.)
+				</ol>
+		</ul>
+	</p>
+
 
 </body>
+</html>
