--- a/gh.html
+++ b/gh.html
@@ -30,10 +30,10 @@
 	<h2>Intro</h2>
 	<h2>Bookmarklet</h2>
 	<div class="p">
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {/*M1*/
-window.ktoBookmarklet?window.ktoBookmarklet.toggleMenu():function(){var a,r,l,i,s,d,u,e,t,m,h,o,p={},c=window['document'],n=c['location'],{host:n,protocol:g}=n,v='github.com';'file:'===g||'kierantop.github.io'===n||n===v?(r=(e,t,o)=>{var a=c.createElement(e);return Object.keys(t||{}).forEach(e=>{a.setAttribute(e,t[e])}),o&&(a.textContent=o),a},l=(e,t)=>{var o=r('div',{style:'border-radius:3px;width:fit-content;padding:3px;background-color:red;color:yellow;margin:10px auto -9px auto;'},e);if(a.children[0].append(o),setTimeout(()=>o.remove(),2e3),t)throw e},i=()=>{var e=c.activeElement;return e&&'textarea'===e.type||l('Please focus on a textarea',!0),[e,e.selectionStart,e.selectionEnd]},s=()=>{var[e]=i(),[e,t,o]=[e.style,'fontFamily','Courier'];e[t]?e[t]='':(e[t]=o,l('Switched font to '+o+'; click again to revert'))},d=(e,t,o,a)=>{var r,n,i;n=!(r='insertText'),i=a,c.execCommand?c.execCommand(r,n,i):(l('Beware, your undo buffer might misbehave.'),e.value=e.value.substring(0,t)+a+e.value.substring(o))},u=()=>{var[e,t,o]=i(),a='selection',r=(void 0!==t&&void 0!==o&&0<o-t||(e.focus(),c.execCommand('selectAll',!1),t=e.selectionStart,o=e.selectionEnd,a='entire textarea'),e.value.substring(t,o)),n=0,r=r.replaceAll(/\!\[image\]\((https:\/\/github\.com\/user-attachments\/.*?)\)/g,(e,t)=>(n+=1,'<img width=30% src='+t+'>'));d(e,t,o,r),l('Replaced '+n+' occurence(s) of ![image](...) in '+a)},e=(e,t)=>{var[o,a,r]=i();d(o,a,r,t),l('Inserted '+e+' at cursor')},t=e=>e.replaceAll(/^(\s+)/gm,'$1$1$1$1'),m=()=>{e('details',t('<details>\n <summary>\n  summary\n </summary>\n details\n</details>\n'))},h=()=>{e('table',t('<table>\n <tr>\n  <th>\n   head1\n  </th>\n  <th>\n   head2\n  </th>\n </tr>\n <tr>\n  <td>\n   cell1\n  </td>\n  <td>\n   cell2\n  </td>\n </tr>\n</table>\n'))},o=(e,t)=>{e=r('a',{href:'#'},e);return e.onmousedown=e.onclick=e=>{e.preventDefault()},e.onmouseup=e=>{e.preventDefault(),t()},e},(p.toggleMenu=()=>{var t;a?(a.remove(),a=null):(a=r('div',{style:'width:100%;height:0;position:fixed;top:0;left:0;z-index:1000;'}),t=r('div',{style:'color:#17303B;margin:auto;text-align:center;padding:10px;background-color:#eee;border:2px solid #A0AD39;opacity:0.9;font-family:arial'}),['v0.2 | ',o('<img>',u),' | ',o('<table>',h),' | ',o('<details>',m),' | ',o('<font>',s),' | '].forEach(e=>t.append(e)),t.insertAdjacentHTML('beforeend','<a target=\'_blank\' href=\'https://kierantop.github.io/gh.html\'>about</a>'),a.appendChild(t),c.body.append(a))})(),window.ktoBookmarklet=p):alert('Only run on '+v)}();
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {/*A1*/
+window.ktoBookmarklet?window.ktoBookmarklet.toggleMenu():function(){var a,r,i,l,e,d,c,t,o,u,m,n,h={},s=window['document'],p=s['location'],{host:g,protocol:v}=p,b='github.com';'file:'===v||'kierantop.github.io'===g||g===b?(r=(e,t,o)=>{var a=s.createElement(e);return Object.keys(t||{}).forEach(e=>{a.setAttribute(e,t[e])}),o&&(a.textContent=o),a},i=(e,t)=>{var o=r('div',{style:'border-radius:3px;width:fit-content;padding:3px;background-color:red;color:yellow;margin:10px auto -9px auto;'},e);if(a.children[0].append(o),setTimeout(()=>o.remove(),2e3),t)throw e},l=()=>{var e=s.activeElement;return e&&'textarea'===e.type||i('Please focus on a textarea',!0),[e,e.selectionStart,e.selectionEnd]},e=()=>{var[e]=l(),[e,t,o,a,r]=[e.style,'fontFamily','Courier','whiteSpace','nowrap'];e[t]?(e[t]='',e[a]=''):(e[t]=o,e[a]=r,i('Switched font to '+o+' and white-space to '+r+'; click again to revert'))},d=(e,t,o,a)=>{s.execCommand?s.execCommand('insertText',!1,a):(i('Beware, your undo buffer might misbehave.'),e.value=e.value.substring(0,t)+a+e.value.substring(o))},c=()=>{var[e,t,o]=l(),a='selection',r=(void 0!==t&&void 0!==o&&0<o-t||(e.focus(),s.execCommand('selectAll',!1),t=e.selectionStart,o=e.selectionEnd,a='entire textarea'),e.value.substring(t,o)),n=0,r=r.replaceAll(/\!\[image\]\((https:\/\/github\.com\/user-attachments\/.*?)\)/g,(e,t)=>(n+=1,'<img width=30% src='+t+'>'));d(e,t,o,r),i('Replaced '+n+' occurence(s) of ![image](...) in '+a)},t=(e,t)=>{var[o,a,r]=l();d(o,a,r,t),i('Inserted '+e+' at cursor')},o=e=>e.replaceAll(/^(\s+)/gm,'$1$1$1$1'),u=()=>{t('details',o('<details>\n <summary>\n  summary\n </summary>\n details\n</details>\n'))},m=()=>{t('table',o('<table>\n <tr>\n  <th>\n   head1\n  </th>\n  <th>\n   head2\n  </th>\n </tr>\n <tr>\n  <td>\n   cell1\n  </td>\n  <td>\n   cell2\n  </td>\n </tr>\n</table>\n'))},n=(e,t,o)=>{var a=e=>e.preventDefault(),o=r('a',{href:'#',title:o,style:'text-decoration: none'},e);return Object.assign(o,{onmouseover:e=>e.target.style.textDecoration='underline',onmouseout:e=>e.target.style.textDecoration='none',onmousedown:a,onclick:a,onmouseup:e=>{a(e),t()}}),o},(h.toggleMenu=()=>{var t;a?(a.remove(),a=null):(a=r('div',{style:'width:100%;height:0;position:fixed;top:0;left:0;z-index:1000;'}),t=r('div',{style:'color:#17303B;margin:auto;text-align:center;padding:10px;background-color:#eee;border:2px solid #A0AD39;opacity:0.95;font-family:arial'}),['v0.3 | ',n('<img>',c,'Rewrite ![image] to <img>'),' | ',n('<table>',m,'Insert <table>'),' | ',n('<details>',u,'Insert <details>'),' | ',n('Aa↩',e,'Fixed-width font, no wrap'),' | ',n('about',()=>{p.href='https://kierantop.github.io/gh.html'},'About')].forEach(e=>t.append(e)),a.appendChild(t),s.body.append(a))})(),window.ktoBookmarklet=h):alert('Only run on '+b)}();
 
-/*M2*/})()">&lt;gh&gt;
+/*A2*/})()">&lt;gh&gt;
 	</a>
 	</div>
 
@@ -81,7 +81,199 @@ myFunc() {
 	</div>
 
 	<p>
-		<b>Build:</b> ./build/build.sh
+		<b>Build:</b> ./build/build.sh<br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {/*B1*/
+if (window.ktoBookmarklet) {
+	window.ktoBookmarklet.toggleMenu();
+} else {
+
+	(function() {
+
+		var kto = {};
+		var {document} = window;
+		var {location} = document;
+		var {host,protocol} = location;
+		var menuEl;
+		var test = protocol === 'file:' || host === 'kierantop.github.io';
+		var github = 'github.com';
+		if (!test && host !== github) {
+			alert('Only run on '+github);
+			return false;
+		}
+
+		var createEl = (name, attrs, text) => {
+			var el = document.createElement(name);
+			Object.keys(attrs||{}).forEach(k => {el.setAttribute(k,attrs[k])});
+			text ? el.textContent = text : 0;
+			return el;
+		};
+
+		var showMessage = (msg, raise) => {
+			var msgEl = createEl('div', {
+				style: 'border-radius:3px;width:fit-content;padding:3px;background-color:red;color:yellow;margin:10px auto -9px auto;'
+			}, msg);
+			menuEl.children[0].append(msgEl);
+			setTimeout(()=>msgEl.remove(), 2000);
+			if (raise) throw(msg);
+		};
+
+		var getActiveTA = () => {
+			var t = document.activeElement;
+			if (!(t && t.type === 'textarea')) {
+				showMessage('Please focus on a textarea', true);
+			}
+			return [t, t.selectionStart, t.selectionEnd];
+		};
+
+		var toggleFont = () => {
+			var [textarea] = getActiveTA();
+			var [style,fontFamily,courier,whiteSpace,nowrap] = [textarea.style,'fontFamily','Courier','whiteSpace','nowrap']; 
+			if (style[fontFamily]) {
+				style[fontFamily] = '';
+				style[whiteSpace] = '';
+			} else {
+				style[fontFamily] = courier;
+				style[whiteSpace] = nowrap;
+				showMessage('Switched font to ' + courier + ' and white-space to ' + nowrap + '; click again to revert');
+			}
+		};
+
+		var undoWarning = 'Beware, your undo buffer might misbehave.';
+
+		var replaceInTextarea = (textarea, s, e, str) => {
+			/* Apparently, deprecated, but it's the only way to preserve undo buffer */
+			if (document.execCommand) {
+				document.execCommand('insertText', false, str);
+			} else {
+				showMessage(undoWarning);
+				textarea.value = textarea.value.substring(0, s) + str + textarea.value.substring(e);
+			}
+		};
+
+		var rewriteImages = () => {
+
+			var [textarea, s, e] = getActiveTA();
+
+			var _in = 'selection';
+			if (!(s!==undefined && e!==undefined && e-s > 0)) {
+				textarea.focus();
+				document.execCommand('selectAll', false);
+				s = textarea.selectionStart;
+				e = textarea.selectionEnd;
+				_in = 'entire textarea';
+			}
+			var sel = textarea.value.substring(s, e);
+		
+			var c = 0;
+			sel = sel.replaceAll(
+				/\!\[image\]\((https:\/\/github\.com\/user-attachments\/.*?)\)/g,
+				(s, p1) => { c+=1; return '<img width=30% src=' + p1 + '>'; }
+			);
+			replaceInTextarea(textarea, s, e, sel);			
+			showMessage('Replaced ' + c + ' occurence(s) of ![image](...) in ' + _in);
+		};
+
+		var insert = (name, str) => {
+			var [t, s, e] = getActiveTA();
+			replaceInTextarea(t, s, e, str);			
+			showMessage('Inserted ' + name + ' at cursor');
+		};
+
+		var rpl = (s) => s.replaceAll(/^(\s+)/gm,'$1$1$1$1'); /*.replaceAll(/\n/g, '\r\n'); */
+
+		var insertDetails = () => {
+			insert('details', rpl(`<details>
+ <summary>
+  summary
+ </summary>
+ details
+</details>
+`));
+		};
+
+		var insertTable = () => {
+			insert('table', rpl(`<table>
+ <tr>
+  <th>
+   head1
+  </th>
+  <th>
+   head2
+  </th>
+ </tr>
+ <tr>
+  <td>
+   cell1
+  </td>
+  <td>
+   cell2
+  </td>
+ </tr>
+</table>
+`));
+		};
+
+		var createLink = (name, fn, title) => {
+			var preventDefault = (e) => e.preventDefault();
+			var a = createEl('a', {
+				href: '#',
+				title: title,
+				style: 'text-decoration: none'
+			}, name);
+			Object.assign(a, {
+				onmouseover: (e) => e.target.style.textDecoration = 'underline',
+				onmouseout: (e) => e.target.style.textDecoration = 'none',
+				/* Catch clicks without grabbing focus */
+				/* Prevent the href being followed */
+				onmousedown: preventDefault,
+				onclick: preventDefault,
+				onmouseup: (e) => { preventDefault(e); fn() }
+			});
+			return a;
+		};
+
+		var showMenu = () => {
+			menuEl = createEl('div', {
+				style: 'width:100%;height:0;position:fixed;top:0;left:0;z-index:1000;'
+			});
+			var c = createEl('div', {
+				style: 'color:#17303B;margin:auto;text-align:center;padding:10px;background-color:#eee;border:2px solid #A0AD39;opacity:0.95;font-family:arial'
+			});
+			[
+				'v0.3 | ',
+				createLink('<img>', rewriteImages, 'Rewrite ![image] to <img>'),
+				' | ',
+				createLink('<table>', insertTable, 'Insert <table>'),
+				' | ',
+				createLink('<details>', insertDetails, 'Insert <details>'),
+				' | ',
+				createLink('Aa↩', toggleFont, 'Fixed-width font, no wrap'),
+				' | ',
+				createLink('about', () => {location.href='https://kierantop.github.io/gh.html'}, 'About'),				
+			].forEach(x => c.append(x));
+			menuEl.appendChild(c);
+			document.body.append(menuEl);
+		};
+
+		var hideMenu = () => {
+			menuEl.remove();
+			menuEl = null;
+		};
+
+		var toggleMenu = () => {
+			if (menuEl) hideMenu();
+			else showMenu();
+		};
+
+		kto.toggleMenu = toggleMenu;
+
+		toggleMenu();
+
+		window.ktoBookmarklet = kto;
+	})();
+}
+/*B2*/})()">&lt;gh-unminified&gt;</a>
+						
 	</p>
 	<p>
 		<b>Useful:</b>
@@ -94,6 +286,7 @@ myFunc() {
 		<b>TODO:</b>
 		<ul>
 			<li>Prettify this page.
+			<li>Newlines in unminified version.
 			<li>Write about undo/deprecation.
 			<li>Write about build process (plus host the full-length js, and link to the gh repo).
 		</ul>
