--- a/gh.html
+++ b/gh.html
@@ -30,10 +30,8 @@
 	<h2>Intro</h2>
 	<h2>Bookmarklet</h2>
 	<div class="p">
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {/*A1*/
-window.ktoBookmarklet?window.ktoBookmarklet.toggleMenu():function(){var a,r,i,l,e,d,c,t,o,u,m,n,h={},s=window['document'],p=s['location'],{host:g,protocol:v}=p,b='github.com';'file:'===v||'kierantop.github.io'===g||g===b?(r=(e,t,o)=>{var a=s.createElement(e);return Object.keys(t||{}).forEach(e=>{a.setAttribute(e,t[e])}),o&&(a.textContent=o),a},i=(e,t)=>{var o=r('div',{style:'border-radius:3px;width:fit-content;padding:3px;background-color:red;color:yellow;margin:10px auto -9px auto;'},e);if(a.children[0].append(o),setTimeout(()=>o.remove(),2e3),t)throw e},l=()=>{var e=s.activeElement;return e&&'textarea'===e.type||i('Please focus on a textarea',!0),[e,e.selectionStart,e.selectionEnd]},e=()=>{var[e]=l(),[e,t,o,a,r]=[e.style,'fontFamily','Courier','whiteSpace','nowrap'];e[t]?(e[t]='',e[a]=''):(e[t]=o,e[a]=r,i('Switched font to '+o+' and white-space to '+r+'; click again to revert'))},d=(e,t,o,a)=>{s.execCommand?s.execCommand('insertText',!1,a):(i('Beware, your undo buffer might misbehave.'),e.value=e.value.substring(0,t)+a+e.value.substring(o))},c=()=>{var[e,t,o]=l(),a='selection',r=(void 0!==t&&void 0!==o&&0<o-t||(e.focus(),s.execCommand('selectAll',!1),t=e.selectionStart,o=e.selectionEnd,a='entire textarea'),e.value.substring(t,o)),n=0,r=r.replaceAll(/\!\[image\]\((https:\/\/github\.com\/user-attachments\/.*?)\)/g,(e,t)=>(n+=1,'<img width=30% src='+t+'>'));d(e,t,o,r),i('Replaced '+n+' occurence(s) of ![image](...) in '+a)},t=(e,t)=>{var[o,a,r]=l();d(o,a,r,t),i('Inserted '+e+' at cursor')},o=e=>e.replaceAll(/^(\s+)/gm,'$1$1$1$1'),u=()=>{t('details',o('<details>\n <summary>\n  summary\n </summary>\n details\n</details>\n'))},m=()=>{t('table',o('<table>\n <tr>\n  <th>\n   head1\n  </th>\n  <th>\n   head2\n  </th>\n </tr>\n <tr>\n  <td>\n   cell1\n  </td>\n  <td>\n   cell2\n  </td>\n </tr>\n</table>\n'))},n=(e,t,o)=>{var a=e=>e.preventDefault(),o=r('a',{href:'#',title:o,style:'text-decoration: none'},e);return Object.assign(o,{onmouseover:e=>e.target.style.textDecoration='underline',onmouseout:e=>e.target.style.textDecoration='none',onmousedown:a,onclick:a,onmouseup:e=>{a(e),t()}}),o},(h.toggleMenu=()=>{var t;a?(a.remove(),a=null):(a=r('div',{style:'width:100%;height:0;position:fixed;top:0;left:0;z-index:1000;'}),t=r('div',{style:'color:#17303B;margin:auto;text-align:center;padding:10px;background-color:#eee;border:2px solid #A0AD39;opacity:0.95;font-family:arial'}),['v0.3 | ',n('<img>',c,'Rewrite ![image] to <img>'),' | ',n('<table>',m,'Insert <table>'),' | ',n('<details>',u,'Insert <details>'),' | ',n('Aa↩',e,'Fixed-width font, no wrap'),' | ',n('about',()=>{p.href='https://kierantop.github.io/gh.html'},'About')].forEach(e=>t.append(e)),a.appendChild(t),s.body.append(a))})(),window.ktoBookmarklet=h):alert('Only run on '+b)}();
-
-/*A2*/})()">&lt;gh&gt;
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {window.ktoBookmarklet?window.ktoBookmarklet.toggleMenu():function(){var o,a,i,l,e,d,c,t,n,u,m,r,h={},s=window['document'],p=s['location'],{host:g,protocol:v}=p,b='github.com';'file:'===v||'kierantop.github.io'===g||g===b?(a=(e,t,n)=>{var o=s.createElement(e);return Object.keys(t||{}).forEach(e=>{o.setAttribute(e,t[e])}),n&&(o.textContent=n),o},i=(e,t)=>{var n=a('div',{style:'border-radius:3px;width:fit-content;padding:3px;background-color:red;color:yellow;margin:10px auto -9px auto;'},e);if(o.children[0].append(n),setTimeout(()=>n.remove(),2e3),t)throw e},l=()=>{var e=s.activeElement;return e&&'textarea'===e.type||i('Please focus on a textarea',!0),[e,e.selectionStart,e.selectionEnd]},e=()=>{var[e]=l(),[e,t,n,o,a]=[e.style,'fontFamily','Courier','whiteSpace','nowrap'];e[t]?(e[t]='',e[o]=''):(e[t]=n,e[o]=a,i('Switched font to '+n+' and white-space to '+a+'; click again to revert'))},d=(e,t,n,o)=>{s.execCommand?s.execCommand('insertText',!1,o):(i('Beware, your undo buffer might misbehave.'),e.value=e.value.substring(0,t)+o+e.value.substring(n))},c=()=>{var[e,t,n]=l(),o='selection',a=(void 0!==t&&void 0!==n&&0<n-t||(e.focus(),s.execCommand('selectAll',!1),t=e.selectionStart,n=e.selectionEnd,o='entire textarea'),e.value.substring(t,n)),r=0,a=a.replaceAll(/\!\[image\]\((https:\/\/github\.com\/user-attachments\/.*?)\)/g,(e,t)=>(r+=1,'<img width=30% src='+t+'>'));d(e,t,n,a),i('Replaced '+r+' occurence(s) of ![image](...) in '+o)},t=(e,t)=>{var[n,o,a]=l();d(n,o,a,t),i('Inserted '+e+' at cursor')},n=e=>e.replaceAll(/^(\s+)/gm,'$1$1$1$1'),u=()=>{t('details',n('<details>\n <summary>\n  summary\n </summary>\n details\n</details>\n'))},m=()=>{t('table',n('<table>\n <tr>\n  <th>\n   head1\n  </th>\n  <th>\n   head2\n  </th>\n </tr>\n <tr>\n  <td>\n   cell1\n  </td>\n  <td>\n   cell2\n  </td>\n </tr>\n</table>\n'))},r=(e,t,n)=>{var o=e=>e.preventDefault(),n=a('a',{href:'#',title:n,style:'text-decoration: none'},e);return Object.assign(n,{onmouseover:e=>e.target.style.textDecoration='underline',onmouseout:e=>e.target.style.textDecoration='none',onmousedown:o,onclick:o,onmouseup:e=>{o(e),t()}}),n},(h.toggleMenu=()=>{var t;o?(o.remove(),o=null):(o=a('div',{style:'width:100%;height:0;position:fixed;top:0;left:0;z-index:1000;'}),t=a('div',{style:'color:#17303B;margin:auto;text-align:center;padding:10px;background-color:#eee;border:2px solid #A0AD39;opacity:0.95;font-family:arial'}),['v0.3 | ',r('<img>',c,'Rewrite ![image] to <img>'),' | ',r('<table>',m,'Insert <table>'),' | ',r('<details>',u,'Insert <details>'),' | ',r('Aa↩',e,'Fixed-width font, no wrap'),' | ',r('about',()=>{p.href='https://kierantop.github.io/gh.html'},'About')].forEach(e=>t.append(e)),o.appendChild(t),s.body.append(o))})(),window.ktoBookmarklet=h):alert('Only run on '+b)}();
+})()">&lt;gh&gt;
 	</a>
 	</div>
 
@@ -82,7 +80,7 @@ myFunc() {
 
 	<p>
 		<b>Build:</b> ./build/build.sh<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {/*B1*/
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {
 if (window.ktoBookmarklet) {
 	window.ktoBookmarklet.toggleMenu();
 } else {
@@ -182,35 +180,11 @@ if (window.ktoBookmarklet) {
 		var rpl = (s) => s.replaceAll(/^(\s+)/gm,'$1$1$1$1'); /*.replaceAll(/\n/g, '\r\n'); */
 
 		var insertDetails = () => {
-			insert('details', rpl(`<details>
- <summary>
-  summary
- </summary>
- details
-</details>
-`));
+			insert('details', rpl('<details>\n <summary>\n  summary\n </summary>\n details\n</details>\n'));
 		};
 
 		var insertTable = () => {
-			insert('table', rpl(`<table>
- <tr>
-  <th>
-   head1
-  </th>
-  <th>
-   head2
-  </th>
- </tr>
- <tr>
-  <td>
-   cell1
-  </td>
-  <td>
-   cell2
-  </td>
- </tr>
-</table>
-`));
+			insert('table', rpl('<table>\n <tr>\n  <th>\n   head1\n  </th>\n  <th>\n   head2\n  </th>\n </tr>\n <tr>\n  <td>\n   cell1\n  </td>\n  <td>\n   cell2\n  </td>\n </tr>\n</table>\n'));
 		};
 
 		var createLink = (name, fn, title) => {
@@ -272,7 +246,7 @@ if (window.ktoBookmarklet) {
 		window.ktoBookmarklet = kto;
 	})();
 }
-/*B2*/})()">&lt;gh-unminified&gt;</a>
+})()">&lt;gh-unminified&gt;</a>
 						
 	</p>
 	<p>
