--- a/gh.html
+++ b/gh.html
@@ -78,9 +78,12 @@ myFunc() {
 </textarea>
 	</div>
 
-	<p>
-		<b>Build:</b> ./build/build.sh<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {
+	<h2>Build</h2>
+	<code>
+		./build/build.sh <br>
+	</code>
+	<h2>Unminified version</h2>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {
 if (window.ktoBookmarklet) {
 	window.ktoBookmarklet.toggleMenu();
 } else {
@@ -247,24 +250,22 @@ if (window.ktoBookmarklet) {
 	})();
 }
 })()">&lt;gh-unminified&gt;</a>
-						
-	</p>
-	<p>
-		<b>Useful:</b>
-		<ul>
-			<li>https://gist.github.com/asidko/9c7064027039411a11323eaf7d8ea2a4
-			<li>https://www.npmjs.com/package/uglify-js
-		</ul>
-	</p>
-	<p>
-		<b>TODO:</b>
-		<ul>
-			<li>Prettify this page.
-			<li>Newlines in unminified version.
-			<li>Write about undo/deprecation.
-			<li>Write about build process (plus host the full-length js, and link to the gh repo).
-		</ul>
-	</p>
+
+	<h2>Source</h2>
+	GitHub: <a href="https://github.com/kierantop/kierantop.github.io">kierantop/kierantop.github.io</a>
+
+	<h2>Useful</h2>
+	<ul>
+		<li>https://gist.github.com/asidko/9c7064027039411a11323eaf7d8ea2a4
+		<li>https://www.npmjs.com/package/uglify-js
+	</ul>
+
+	<h2>TODO</h2>
+	<ul>
+		<li>Prettify this page.
+		<li>Write about undo/deprecation.
+		<li>Write about build process.
+	</ul>
 
 </body>
 </html>
