--- a/gh.tmpl.html
+++ b/gh.tmpl.html
@@ -28,6 +28,16 @@
 
 	<h1>Github Markdown Helper Bookmarklet</h1>
 	<h2>Intro</h2>
+	This bookmarklet adds some useful functionality to markdown textareas within Github (for example, PR description, Issue description, Comments and Reviews).
+	Specifically it provides the following:
+	<ol>
+		<li>Turn <code>!image</code> elements (commonly created by drag/dropping, or by pasting images) into <code>&lt;img&gt;</code> elements, giving you control over size (via width & height attributes).
+		<li>Insert a blank <code>&lt;table&gt;</code> element - easier to use for those comfortable with HTML.
+		<li>Insert a blank <code>&lt;details&gt;</code> element - which is really useful when including long code or data snippets in comments.
+		<li>Switch the textarea font to a fixed-width font, and disable word wrapping - useful when formatting code or data.
+	</ol>
+	Drag the bookmarklet to your bookmarks bar, navigate to github, and click on it in a page with textareas you want to garnish.
+
 	<h2>Bookmarklet</h2>
 	<div class="p">
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {/*MINIFIEDJS*/})()">&lt;gh&gt;
@@ -85,7 +95,10 @@ myFunc() {
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {/*UNMINIFIEDJS*/})()">&lt;gh-unminified&gt;</a>
 
 	<h2>Source</h2>
-	GitHub: <a href="https://github.com/kierantop/kierantop.github.io">kierantop/kierantop.github.io</a>
+	<ul>
+		<li><b>GitHub:</b> <a href="https://github.com/kierantop/kierantop.github.io">kierantop/kierantop.github.io</a>
+		<li><b>These docs:</b> <a href="https://kierantop.github.io/gh.html">https://kierantop.github.io/gh.html</a>
+	</ul>
 
 	<h2>Useful</h2>
 	<ul>
