--- a/gh.html
+++ b/gh.html
@@ -28,9 +28,19 @@
 
 	<h1>Github Markdown Helper Bookmarklet</h1>
 	<h2>Intro</h2>
+	This bookmarklet adds some useful functionality to markdown textareas within Github (for example, PR description, Issue description, Comments and Reviews).
+	Specifically it provides the following:
+	<ol>
+		<li>Turn <code>!image</code> elements (commonly created by drag/dropping, or by pasting images) into <code>&lt;img&gt;</code> elements, giving you control over size (via width & height attributes).
+		<li>Insert a blank <code>&lt;table&gt;</code> element - easier to use for those comfortable with HTML.
+		<li>Insert a blank <code>&lt;details&gt;</code> element - which is really useful when including long code or data snippets in comments.
+		<li>Switch the textarea font to a fixed-width font, and disable word wrapping - useful when formatting code or data.
+	</ol>
+	Drag the bookmarklet to your bookmarks bar, navigate to github, and click on it in a page with textareas you want to garnish.
+
 	<h2>Bookmarklet</h2>
 	<div class="p">
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {window.ktoBookmarklet?window.ktoBookmarklet.toggleMenu():function(){var o,a,i,l,e,d,c,t,n,u,m,r,h={},s=window['document'],p=s['location'],{host:g,protocol:v}=p,b='github.com';'file:'===v||'kierantop.github.io'===g||g===b?(a=(e,t,n)=>{var o=s.createElement(e);return Object.keys(t||{}).forEach(e=>{o.setAttribute(e,t[e])}),n&&(o.textContent=n),o},i=(e,t)=>{var n=a('div',{style:'border-radius:3px;width:fit-content;padding:3px;background-color:red;color:yellow;margin:10px auto -9px auto;'},e);if(o.children[0].append(n),setTimeout(()=>n.remove(),2e3),t)throw e},l=()=>{var e=s.activeElement;return e&&'textarea'===e.type||i('Please focus on a textarea',!0),[e,e.selectionStart,e.selectionEnd]},e=()=>{var[e]=l(),[e,t,n,o,a]=[e.style,'fontFamily','Courier','whiteSpace','nowrap'];e[t]?(e[t]='',e[o]=''):(e[t]=n,e[o]=a,i('Switched font to '+n+' and white-space to '+a+'; click again to revert'))},d=(e,t,n,o)=>{s.execCommand?s.execCommand('insertText',!1,o):(i('Beware, your undo buffer might misbehave.'),e.value=e.value.substring(0,t)+o+e.value.substring(n))},c=()=>{var[e,t,n]=l(),o='selection',a=(void 0!==t&&void 0!==n&&0<n-t||(e.focus(),s.execCommand('selectAll',!1),t=e.selectionStart,n=e.selectionEnd,o='entire textarea'),e.value.substring(t,n)),r=0,a=a.replaceAll(/\!\[image\]\((https:\/\/github\.com\/user-attachments\/.*?)\)/g,(e,t)=>(r+=1,'<img width=30% src='+t+'>'));d(e,t,n,a),i('Replaced '+r+' occurence(s) of ![image](...) in '+o)},t=(e,t)=>{var[n,o,a]=l();d(n,o,a,t),i('Inserted '+e+' at cursor')},n=e=>e.replaceAll(/^(\s+)/gm,'$1$1$1$1'),u=()=>{t('details',n('<details>\n <summary>\n  summary\n </summary>\n details\n</details>\n'))},m=()=>{t('table',n('<table>\n <tr>\n  <th>\n   head1\n  </th>\n  <th>\n   head2\n  </th>\n </tr>\n <tr>\n  <td>\n   cell1\n  </td>\n  <td>\n   cell2\n  </td>\n </tr>\n</table>\n'))},r=(e,t,n)=>{var o=e=>e.preventDefault(),n=a('a',{href:'#',title:n,style:'text-decoration: none'},e);return Object.assign(n,{onmouseover:e=>e.target.style.textDecoration='underline',onmouseout:e=>e.target.style.textDecoration='none',onmousedown:o,onclick:o,onmouseup:e=>{o(e),t()}}),n},(h.toggleMenu=()=>{var t;o?(o.remove(),o=null):(o=a('div',{style:'width:100%;height:0;position:fixed;top:0;left:0;z-index:1000;'}),t=a('div',{style:'color:#17303B;margin:auto;text-align:center;padding:10px;background-color:#eee;border:2px solid #A0AD39;opacity:0.95;font-family:arial'}),['v0.3 | ',r('<img>',c,'Rewrite ![image] to <img>'),' | ',r('<table>',m,'Insert <table>'),' | ',r('<details>',u,'Insert <details>'),' | ',r('Aa↩',e,'Fixed-width font, no wrap'),' | ',r('about',()=>{p.href='https://kierantop.github.io/gh.html'},'About')].forEach(e=>t.append(e)),o.appendChild(t),s.body.append(o))})(),window.ktoBookmarklet=h):alert('Only run on '+b)}();
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript:(function () {window.ktoBookmarklet?window.ktoBookmarklet.toggleMenu():function(){var o,r,i,l,c,d,u,e,t,m,p,n,g={},s=window['document'],a=s['location'],{host:a,protocol:h}=a,v='github.com';'file:'===h||'kierantop.github.io'===a||a===v?(r=(e,t,n)=>{e=s.createElement(e);return Object.assign(e,t||{}),n&&(e.textContent=n),e},i=(e,t)=>{var n=r('div',{style:'border-radius:3px;width:fit-content;padding:3px;background-color:red;color:yellow;margin:10px auto -9px auto;'},e);if(o.children[0].append(n),setTimeout(()=>n.remove(),2e3),t)throw e},l=()=>{var e=s.activeElement;return e&&'textarea'===e.type||i('Please focus on a textarea',!0),[e,e.selectionStart,e.selectionEnd]},c=()=>{var[e]=l(),[e,t,n,o,a]=[e.style,'fontFamily','Courier','whiteSpace','nowrap'];e[t]?(e[t]='',e[o]=''):(e[t]=n,e[o]=a,i('Switched font to '+n+' and white-space to '+a+'; click again to revert'))},d=(e,t,n,o)=>{s.execCommand?s.execCommand('insertText',!1,o):(i('Beware, your undo buffer might misbehave.'),e.value=e.value.substring(0,t)+o+e.value.substring(n))},u=()=>{var[e,t,n]=l(),o='selection',a=(void 0!==t&&void 0!==n&&0<n-t||(e.focus(),s.execCommand('selectAll',!1),t=e.selectionStart,n=e.selectionEnd,o='entire textarea'),e.value.substring(t,n)),r=0,a=a.replaceAll(/\!\[image\]\((https:\/\/github\.com\/user-attachments\/.*?)\)/g,(e,t)=>(r+=1,'<img width=30% src='+t+'>'));d(e,t,n,a),i('Replaced '+r+' occurence(s) of ![image](...) in '+o)},e=(e,t)=>{var[n,o,a]=l();d(n,o,a,t),i('Inserted '+e+' at cursor')},t=e=>e.replaceAll(/^(\s+)/gm,'$1$1$1$1'),m=()=>{e('details',t('<details>\n <summary>\n  summary\n </summary>\n details\n</details>\n'))},p=()=>{e('table',t('<table>\n <tr>\n  <th>\n   head1\n  </th>\n  <th>\n   head2\n  </th>\n </tr>\n <tr>\n  <td>\n   cell1\n  </td>\n  <td>\n   cell2\n  </td>\n </tr>\n</table>\n'))},n=(e,t,n,o)=>{o=o||{};var a=e=>e.preventDefault(),n=r('a',{href:'#',title:n,style:'text-decoration: none'},e);return Object.assign(n,{onmouseover:e=>e.target.style.textDecoration='underline',onmouseout:e=>e.target.style.textDecoration='none',onmousedown:a,onclick:a,onmouseup:e=>{a(e),t&&t()}},o),n},(g.toggleMenu=()=>{var t;o?(o.remove(),o=null):(o=r('div',{style:'width:100%;height:0;position:fixed;top:0;left:0;z-index:1000;'}),t=r('div',{style:'color:#17303B;margin:auto;text-align:center;padding:10px;background-color:#eee;border:2px solid #A0AD39;opacity:0.95;font-family:arial'}),['v0.3 | ',n('<img>',u,'Rewrite ![image] to <img>'),' | ',n('<table>',p,'Insert <table>'),' | ',n('<details>',m,'Insert <details>'),' | ',n('Aa↩',c,'Fixed-width font, no wrap'),' | ',n('help',void 0,'Help',{onclick:'',target:'_blank',href:'https://kierantop.github.io/gh.html'})].forEach(e=>t.append(e)),o.appendChild(t),s.body.append(o))})(),window.ktoBookmarklet=g):alert('Only run on '+v)}();
 })()">&lt;gh&gt;
 	</a>
 	</div>
@@ -104,7 +114,7 @@ if (window.ktoBookmarklet) {
 
 		var createEl = (name, attrs, text) => {
 			var el = document.createElement(name);
-			Object.keys(attrs||{}).forEach(k => {el.setAttribute(k,attrs[k])});
+			Object.assign(el, attrs || {});
 			text ? el.textContent = text : 0;
 			return el;
 		};
@@ -190,7 +200,9 @@ if (window.ktoBookmarklet) {
 			insert('table', rpl('<table>\n <tr>\n  <th>\n   head1\n  </th>\n  <th>\n   head2\n  </th>\n </tr>\n <tr>\n  <td>\n   cell1\n  </td>\n  <td>\n   cell2\n  </td>\n </tr>\n</table>\n'));
 		};
 
-		var createLink = (name, fn, title) => {
+		var createLink = (name, fn, title, attrs) => {
+			attrs = attrs || {};
+			// attrs.href = attrs.href || '#';
 			var preventDefault = (e) => e.preventDefault();
 			var a = createEl('a', {
 				href: '#',
@@ -204,8 +216,8 @@ if (window.ktoBookmarklet) {
 				/* Prevent the href being followed */
 				onmousedown: preventDefault,
 				onclick: preventDefault,
-				onmouseup: (e) => { preventDefault(e); fn() }
-			});
+				onmouseup: (e) => { preventDefault(e); fn && fn() }
+			}, attrs);
 			return a;
 		};
 
@@ -226,7 +238,7 @@ if (window.ktoBookmarklet) {
 				' | ',
 				createLink('Aa↩', toggleFont, 'Fixed-width font, no wrap'),
 				' | ',
-				createLink('about', () => {location.href='https://kierantop.github.io/gh.html'}, 'About'),				
+				createLink('help', undefined, 'Help', {onclick: '', target: '_blank', href: 'https://kierantop.github.io/gh.html'}),				
 			].forEach(x => c.append(x));
 			menuEl.appendChild(c);
 			document.body.append(menuEl);
@@ -252,7 +264,10 @@ if (window.ktoBookmarklet) {
 })()">&lt;gh-unminified&gt;</a>
 
 	<h2>Source</h2>
-	GitHub: <a href="https://github.com/kierantop/kierantop.github.io">kierantop/kierantop.github.io</a>
+	<ul>
+		<li><b>GitHub:</b> <a href="https://github.com/kierantop/kierantop.github.io">kierantop/kierantop.github.io</a>
+		<li><b>These docs:</b> <a href="https://kierantop.github.io/gh.html">https://kierantop.github.io/gh.html</a>
+	</ul>
 
 	<h2>Useful</h2>
 	<ul>
@@ -265,6 +280,7 @@ if (window.ktoBookmarklet) {
 		<li>Prettify this page.
 		<li>Write about undo/deprecation.
 		<li>Write about build process.
+		<li>Write intro.
 	</ul>
 
 </body>
