--- a/gh.tmpl.html
+++ b/gh.tmpl.html
@@ -105,6 +105,9 @@ myFunc() {
 		<li>https://gist.github.com/asidko/9c7064027039411a11323eaf7d8ea2a4
 		<li>https://www.npmjs.com/package/uglify-js
 	</ul>
+	<div class="p">
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="bm" href="javascript: document.getElementsByTagName('body')[0].setAttribute('contenteditable', true)">[editable]</a>
+	</div>
 
 	<h2>TODO</h2>
 	<ul>
